--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,17 @@
             <artifactId>lombok</artifactId>
             <version>1.18.16</version>
         </dependency>
+
         <dependency>
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
             <version>0.14</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.hynnet</groupId>
+            <artifactId>jacob</artifactId>
+            <version>1.18</version>
         </dependency>
     </dependencies>
 
