1. 添加进制示例 2. 添加文件监控示例 3. 添加jdbc示例 4. 添加jmh示例 5. 添加tls示例 6. 添加2进制流转16进制字符串工具 7. 添加16进制字符串转为2进制字符流转文件工具 8. 添加Resource目录文件读取工具

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <!-- 并发工具包 -->
+        <dependency>
+            <groupId>org.jctools</groupId>
+            <artifactId>jctools-core</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.16</version>
@@ -22,6 +34,19 @@
             <version>0.14</version>
         </dependency>
 
+        <!-- jmh  java Microbenchmark Harness java 微基准 工具套件-->
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.23</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.23</version>
+        </dependency>
+
+        <!-- 语言转音频 -->
         <dependency>
             <groupId>com.hynnet</groupId>
             <artifactId>jacob</artifactId>
