--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <artifactId>jacob</artifactId>
             <version>1.18</version>
         </dependency>
+
+        <!-- mysql -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.22</version>
+        </dependency>
     </dependencies>
 
 </project>
