--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
             </dependency>
+
+            <dependency>
+                <groupId>net.sf.jmimemagic</groupId>
+                <artifactId>jmimemagic</artifactId>
+                <version>0.1.5</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -167,6 +173,17 @@
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>javacv</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.jmimemagic</groupId>
+            <artifactId>jmimemagic</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0.1</version>
         </dependency>
     </dependencies>
 
